apps/redis-commander/templates/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: redis-commander
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      terminationGracePeriodSeconds: 5
      tolerations:
        - key: "cwmc-role"
          value: operator
          effect: NoSchedule
      containers:
      - name: commander
        # Pulled Oct 6, 2021
        image: rediscommander/redis-commander@sha256:19cd0c49f418779fa2822a0496c5e6516d0c792effc39ed20089e6268477e40a
        resources:
          requests:
            cpu: "25m"
            memory: "50Mi"
          limits:
            memory: "200Mi"
