apps/redis-commander/templates/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
spec:
  ports:
  - name: "8081"
    port: 8081
  selector:
    app: redis-commander
